# agenttree

./: .agenttree.yaml  .agenttree.yaml.example  .coverage.aa8fd9f8-6fa4-4f2f-8aa8-69926af77820.pid177.XINUkCtx.HXtjzSswF7Qh  .coverage.agenttree-agenttree-193-9518f1.pid450.XjoTxr8x  .cursorrules  .gitignore  ADDENDUM_PRECREATE_AND_CLI_DESIGN.md  ANALYSIS_CLI_VS_TEMPLATES.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.full  Dockerfile.host  IMPLEMENTATION.md  LICENSE  PLAN_AGENTS_WEB_UI.md  PLAN_AGENTTREE_WORKFLOW.md  PLAN_KANBAN_WORKFLOW.md  PLAN_SERVE_ARCHITECTURE.md  PLAN_TASK_REENGAGEMENT.md  README.md  RESEARCH.md  SESSION_SUMMARY.md  _agenttree  analysis-comparison.md  analysis-dramatic.md  analysis-formaltask.md  justfile  overnight_issue_processing_report.md  pyproject.toml  serve.sh  spec.md
.claude-sessions/: c76c1bc3-0f36-4b51-b6a3-1ee4bbc76385.jsonl
.claude-sessions-agent/: 29cf95ae-6593-46fb-bfd3-4fe7514a932d.jsonl  8eaae07f-3cc6-47b6-8845-bcf04c0c5971.jsonl  a741c650-2d67-41fc-8550-0e37c0f19c6f.jsonl  c6f26161-f2b9-4c4f-9bf8-47bc3f4bf761.jsonl  d2cd7a96-91d3-4e8a-8dec-d6728458491c.jsonl  f700edf5-7171-4871-bc0d-591bfb15a3bf.jsonl  fc8a11a8-2840-4b64-b93e-b7c166e096cd.jsonl
.claude-sessions-agent/c6f26161-f2b9-4c4f-9bf8-47bc3f4bf761/tool-results/: toolu_01TDSufnArFuqHC7JBsREubu.txt
.claude-sessions-agent/f700edf5-7171-4871-bc0d-591bfb15a3bf/subagents/: agent-a3f5e91.jsonl
.claude-sessions-review/: c1842830-571b-49f4-b2d7-268353ccddba.jsonl
.claude/commands/: pr.md
.cursor/rules/: pr-command.mdc
.github/workflows/: ci.yml  claude-review.yml
agenttree/: __init__.py  actions.py  agents_repo.py  api.py  cli.py  cli_docs.py  commands.py  config.py  container.py  controller_agent.py  controller_hooks.py  dependencies.py  environment.py  events.py  frontmatter.py  git_utils.py  github.py  hooks.py  ids.py  issues.py  manager_agent.py  manager_hooks.py  mcp_server.py  notes.py  pr_actions.py  preflight.py  remote.py  rollback.py  stages.py  state.py  state_machine.py  tmux.py  worktree.py
agenttree/agents/: __init__.py  base.py
agenttree/cli/: __init__.py  _legacy.py  _utils.py  agent.py  agents.py  cli_hooks.py  common.py  config_cmd.py  dev.py  hooks_cmd.py  issue.py  issues.py  main.py  mcp_cmd.py  misc.py  notes.py  remote.py  rollback_cmd.py  server.py  setup.py  utils.py  workflow.py
agenttree/templates/: __init__.py  architect.md  default.agenttree.yaml  workflow-config-skill.md
agenttree/tui/: __init__.py  app.py  app.tcss
agenttree/web/: agent_manager.py  app.py  deps.py  models.py  utils.py
agenttree/web/routes/: agents.py  issues.py  pages.py  rate_limit.py  settings.py  voice.py
agenttree/web/static/: panel-resize.js  styles.css  voice.js
default_skills/: independent_review.md
default_skills/agents/: review.md
docs/: PLAN-CLOUD-SERVICE.md  PLAN-SETUP-WIZARD.md  PLANNING-SUMMARY.md  README.md  ROADMAP.md  SECURITY.md  VISION.md  agent-notes-research.md  ci_conflict_handling_design.md  commands-and-serving.md  comparison-openhands.md  concurrency_design.md  container-setup.md  container-strategy.md  edge_cases.md  github-cli-integration.md  implementation-plan.md  integration_test_plan.md  rate_limited_hooks_design.md  web-dashboard.md
docs/architecture/: agents-repository.md  distributed-state-machine-analysis.md  worktree-agenttree-access.md
docs/development/: testing-scope.md  testing.md
docs/planning/: ADDENDUM_PRECREATE_AND_CLI_DESIGN.md  PLANNING-SUMMARY.md  PLAN_AGENTTREE_WORKFLOW.md  PLAN_TASK_REENGAGEMENT.md  SESSION_SUMMARY.md  agent-notes-research.md  api-consolidation-plan.md  claude-code-enhancement-projects-research.md  container-strategy.md  implementation-plan.md  overnight_issue_processing_report.md  rate-limit-fallback-plan.md  tmuxinator-research.md
docs/proposals/: ml-learning-system.md
scripts/: check_merge_conflicts.py  migrate_issue_ids.py  mypy_changed.py  pr_ci_status.py  pr_preflight.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  helpers.py  test_edge_cases.py  test_end_to_end_workflow.py  test_full_workflow.py  test_host_container_boundary.py  test_pr_skip_prevention.py  test_review_loop.py  test_workflow_hooks.py
tests/unit/: test_actions.py  test_agents_repo.py  test_api.py  test_ci_fingerprint.py  test_ci_state_pruning.py  test_cli.py  test_cli_agents.py  test_cli_docs.py  test_cli_utils.py  test_commands.py  test_config.py  test_container.py  test_controller_agent.py  test_controller_hooks.py  test_custom_agent_hosts.py  test_custom_roles.py  test_dependencies.py  test_docs_commands.py  test_docs_structure.py  test_docs_update_stage.py  test_events.py  test_exception_logging.py  test_flows.py  test_frontmatter.py  test_github.py  test_hooks.py  test_ids.py  test_issues.py  test_issues_attachments.py  test_manager_agent.py  test_manager_hooks.py  test_mcp_server.py  test_preflight.py  test_print_to_logging.py  test_reject.py  test_remote.py  test_reset.py  test_rollback.py  test_serve_config.py  test_setup_role.py  (+17 more)
(+26 files in other folders)
