[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenttree"
version = "0.1.0"
description = "Multi-Agent Development Framework - Orchestrate multiple AI coding agents across git worktrees"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AgentTree Contributors"}
]
keywords = ["ai", "agents", "git", "worktree", "automation", "claude", "aider"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "filelock>=3.0.0",
    "jinja2>=3.1.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pylint>=3.0.0",  # For duplicate-code detection command
    "httpx>=0.26.0",  # For FastAPI TestClient
]
web = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]
ml = [
    # Phase 6: ML-based learning system
    "chromadb>=0.4.0",
    "sentence-transformers>=2.3.0",
    "torch>=2.1.0",
]
tui = [
    "textual>=0.70.0",
]
all = [
    "agenttree[dev,web,ml,tui]",
]

[project.scripts]
agenttree = "agenttree.cli:main"

[project.urls]
Homepage = "https://github.com/agenttree/agenttree"
Documentation = "https://github.com/agenttree/agenttree#readme"
Repository = "https://github.com/agenttree/agenttree"
Issues = "https://github.com/agenttree/agenttree/issues"

[tool.hatch.build.targets.wheel]
packages = ["agenttree"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=agenttree --cov-report=term-missing"
markers = [
    "local_only: tests that require local-only tools (Playwright, tmux, containers) and cannot run in CI",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "types-pyyaml>=6.0.12.20250915",
]
